# agentic-cms

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
agents/: README.md  llm.py
agents/tools/: mysql_tools.py  sql_split.py
benchmark/: README.md
cohort_identification/: README.md  architecture_proposal.md  load_phewas_mysql.sh  schema_phewas_mysql.sql
cohort_identification/databases/: README.md
cohort_identification/examples/: README.md  diabetes_codes.json  phewas_anchor_reference.md
docs/: architecture.md  hipaa.md  papers.md  synthetic_data.md
knowledge/: codes.py  constraints.py  schema.json  task_builder.py
knowledge/diseases/: __init__.py  diabetes.py
knowledge/skills/: combine_step.md  extraction_cursor.md
pipelines/diabetes/: README.md  run_pipeline.sh
pipelines/diabetes/reference/: hcpcs_code.sql  icd_9_cm.sql  icd_code.sql
pipelines/diabetes/step1_extraction/: Re_All_other_services_header.sql  Re_All_taf_inpatient.sql  Re_all_inpatient.sql  Re_all_inpatient1315.sql  Re_all_other_therapy.sql  Re_all_other_therapy1315.sql  Re_personal_summary.sql  Re_personal_summary1315.sql  Re_taf_demog_elig_base.sql
pipelines/diabetes/step2_combine/: all_combine.sql  all_combine_demo.sql
pipelines/diabetes/step3_filter/: all_selected_state.sql  all_selected_state_demo.sql
pipelines/diabetes/step4_two_year/: all_in_two_years.sql
pipelines/diabetes/step5_consolidate/: step_2.sql  step_3.sql
pipelines/lung_cancer/: README.md  run_pipeline.sh  run_step1.sh
pipelines/lung_cancer/reference/: README.md  autoimmune_icd_legacy_claims.md  autoimmune_sub_slices.sql  build_reference_tables.sql  chemo_hcpcs_legacy_claims.md  immuno_hcpcs_legacy_claims.md  lung_cancer_icd_legacy_claims.md
pipelines/lung_cancer/step1_extraction/: README.md  exposure_chemo_immuno_TAF.sql  lung_cohort_MAX.sql  lung_cohort_MAX1315.sql  lung_cohort_TAF.sql  outcome_autoimmune_TAF.sql
pipelines/pancreas/: README.md
seed/: AGENTS.md  EXPERIMENT_v1.md  README.md  verify.sh
seed/data/: columns_formats.csv
seed/data/examples/: lung_cancer_codes.json
seed/evidence/: row_counts_v1.json  synthetic_db_seed42.sha256
seed/prompts/: 01_schema_to_synthetic_db.md  02_agent_loop.md  03_critic_partition_check.md  04_skill_cursor_pattern.md  05_disease_profile_template.md  06_pipeline_5_stages.md  07_phewas_anchor_recipe.md  08_validation_harness.md
synthetic_data/: KNOWN_GAPS.md  README.md  build_cms_source.sh  download_synthetic_data.sh  gen_data.py  gen_ddl.py  load_mysql.sql  load_rif.py  seed_mysql.py  ssa_state_crosswalk.py
synthetic_data/tests/: test_synthetic_db.py
tests/: README.md  test_minimal_extraction.py  test_step1_and_2.py  trace_minimal_extraction.txt  trace_step1_and_2.txt
toy_db/: README.md  run_sql.py  schema.sql  seed_mysql.py
(+5 files in other folders)
